--- a/main.html
+++ b/main.html
@@ -35,10 +35,10 @@
 			  
 			  <ul class="ui-tabs-nav ui-corner-all ui-helper-reset ui-helper-clearfix ui-widget-header" role ="tablist">
 				<li tabindex="0" class="ui-tabs-tab ui-corner-top ui-state-default ui-tab ui-tabs-active ui-state-active" role="tab" aria-expanded="true" aria-selected="true" aria-controls="fragment-1" aria-labelledby="ui-id-1">
-					<a tabindex="-1" class="ui-tabs-anchor" id="ui-id-1" role="presentation" href="#fragment-1" >TAVOLO</a>
+					<a tabindex="-1" class="ui-tabs-anchor" id="ui-id-1" role="presentation" href="#fragment-1" >Elementi</a>
 				</li>
 				<li tabindex="-1" class="ui-tabs-tab ui-corner-top ui-state-default ui-tab" role="tab" aria-expanded="false" aria-selected="false" aria-controls="fragment-2" aria-labelledby="ui-id-2">
-					<a tabindex="-1" class="ui-tabs-anchor" id="ui-id-2" role="presentation" href="#fragment-2" ><span>Two</span></a>
+					<a tabindex="-1" class="ui-tabs-anchor" id="ui-id-2" role="presentation" href="#fragment-2" ><span>Impostazioni</span></a>
 				</li>
 			  </ul>
 			  
@@ -64,15 +64,15 @@
 			<div class="hide" id="rmenu">
             <ul>
                 <li>
-                    <a href="http://www.google.com">Google</a>
+                    <a href="">a</a>
                 </li>
 
                 <li>
-                    <a href="http://localhost:8080/login">Localhost</a>
+                    <a href="">b</a>
                 </li>
 
                 <li>
-                    <a href="C:\">C</a>
+                    <a href="">c</a>
                 </li>
             </ul>
         </div>
