fix drag on firefox

--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
 			  <div class="ui-tabs-panel ui-corner-bottom ui-widget-content" id="fragment-1" role="tabpanel" aria-hidden="false" aria-labelledby="ui-id-1" style="display: block;">
 				   <ul>
 					<li ><a onclick="stat(1)">Delete</a></li>
-					<li ><a onclick="stat(2)">Table </a> <div id="square" ondrag="dragST(event)" draggable="true"></div> </li>
-					<li ><a onclick="stat(4)">Long Table </a> <div id="Lsquare" ondrag="dragLT(event)" draggable="true"></div> </li>
+					<li ><a onclick="stat(2)">Table </a> <div id="square" ondrag="dragST(event)" draggable="true" ondragstart="dragStart(event)"></div> </li>
+					<li ><a onclick="stat(4)">Long Table </a> <div id="Lsquare" ondrag="dragLT(event)" draggable="true" ondragstart="dragStart(event)"></div> </li>
 					<li ><a onclick="stat(3)">Blocked area</a></li>
 				  </ul>
 			  </div>
