--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 				<a id="DelSel" onclick="stat(1)" class="list-group-item">Delete</a>
 			 </div>	
 		</div>
-        <div id="test" class="col-md-6" contextmenu="false" onmousedown="MouseDown(event)" onmouseup="MouseUp(event)" ondrop="drop(event)" ondragover="allowDrop(event)" draggable="false"></div>
+        <div id="test" class="col-md-6" contextmenu="false" onmousemove="resizer(event)" onmousedown="MouseDown(event)" onmouseup="MouseUp(event)" ondrop="drop(event)" ondragover="allowDrop(event)" draggable="false"></div>
 		<div class="col-md-3" >
 			
       </div>
@@ -70,8 +70,7 @@
 	
 	<script>
 		main();
-		//test();
-		//sq();
+
 	</script>
 
 
