increase perfomance on change room

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                     <a id="DelSel" onclick="stat(1)" class="list-group-item">Delete</a>
                 </div>
             </div>
-            <div id="test" class="col-md-6" contextmenu="false" onmousemove="resizer(event)"
+            <div id="test" class="col-md-6" contextmenu="false" onmousemove="mouseMove(event)"
                  onmousedown="MouseDown(event)" onmouseup="MouseUp(event)" ondrop="drop(event)"
                  ondragover="allowDrop(event)" draggable="false"></div>
             <div class="col-md-3">
