--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                                                                                                 draggable="true"
                                                                                                 ondragstart="dragStart(event)">
                     </a>
-                    <a id="BlockSel" onclick="stat(3)" class="list-group-item">Blocked area</a>
+                    <a id="BlockSel" onclick="stat(3)" class="list-group-item">Room</a>
                     <a id="DelSel" onclick="stat(1)" class="list-group-item">Delete</a>
                 </div>
             </div>
